# llama-cpp-implementation

./: CMakeLists.txt
common/: .gitignore  CMakeLists.txt  arg.h  common-nexa.cpp  common-nexa.h  common.cpp  common.h
examples/: CMakeLists.txt
examples/llava/: CMakeLists.txt  README.md
examples/nano-omni-audio/: CMakeLists.txt  README.md  add-mel-filters.py  audio-projector-cli.cpp  audio-projector.h  convert-to-gguf-f16.py  gemma2_surgery.py  main-encode.cpp  nexa_sdk.py  omni.cpp  omni_audio_cpp.py  upload_gguf.py  whisper.cpp  whisper.h
examples/nexa-audio-llm/: CMakeLists.txt  README.md  audio-projector.h  nexa_audio_cpp.py  nexa_audio_inference.py  omni.cpp  qwen2audio-cli.cpp  qwen2audio.cpp  qwen2audio.h  whisper.cpp
examples/qwen2-audio/: CMakeLists.txt  README.md  add-mel-filters.py  audio-projector.h  convert-to-gguf-f16.py  nexa_sdk.py  qwen2_audio_cpp.py  qwen2_surgery.py  qwen2audio-cli.cpp  qwen2audio.cpp  qwen2audio.h  upload_gguf.py  whisper.cpp
examples/qwen2-audio/qwen2/: added_tokens.json  config.json  generation_config.json  model.safetensors.index.json  special_tokens_map.json
examples/simple/: README.md
examples/simple-gemma2/: CMakeLists.txt  README.md
examples/whisper-encoder/: CMakeLists.txt  README.md  add-mel-filters.py  convert-to-gguf-f16.py  omni.cpp  prepare-gemma2-hf.py  whisper.cpp  whisper.h
examples/whisper-encoder/pybind/: README.md  nexa_inference_omni_audio.py  omni_audio_cpp.py
ggml/: CMakeLists.txt
src/: CMakeLists.txt  llama.cpp
